--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 1170px)" href="./css/phone.css">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -32,7 +33,7 @@
     <secction class="services-container">
         <div id="services">
             <div class="box">
-                <img src="./img/bg5.jpg" alt="Error">
+                <img src="./img/bg2.jpg" alt="Error">
                 <h2 class="h-secondary center">Our Focus</h2>
                 <p class="center">We think slightly out of the box, we believe that a club’s resources must not only be channeled into conducting events but also to propagate learning and teaching, symbiotically.</p>
             </div>
@@ -71,6 +72,7 @@
             Copyright &copy; www.dscsistec.com All rights reserved!
         </div>
     </footer>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
