--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             Copyright &copy; www.dscsistec.com All rights reserved!
         </div>
     </footer>
-    <script src="/js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
