--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
             <img src="./img/logo.svg" alt="logo.png">
             <p>DSC SISTec</p>
         </div>
-        <ul>
+        <div class="hamburger">
+            <img class="menu-icon" src="./img/list.svg" alt="Menu">
+        </div>
+        <ul class="nav-links">
             <li class="item"><a href="#">Home</a></li>
-            <li class="item"><a href="#">Services</a></li>
             <li class="item"><a href="#">About us</a></li>
             <li class="item"><a href="#">Contact us</a></li>
         </ul>
@@ -72,7 +74,7 @@
             Copyright &copy; www.dscsistec.com All rights reserved!
         </div>
     </footer>
-    <script src="./js/index.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
