--- a/index.html
+++ b/index.html
@@ -39,10 +39,15 @@
                 <h2 class="h-secondary center">Our Focus</h2>
                 <p class="center">We think slightly out of the box, we believe that a club’s resources must not only be channeled into conducting events but also to propagate learning and teaching, symbiotically.</p>
             </div>
-            <div class="box">
-                <img src="./img/bg3.jpg" alt="Error">
-                <h2 class="h-secondary center">The Team</h2>
-                <p class="center">We’ve got a strong team filled with caffeine addicted developers, gradients loving designers and machine like working managers.</p>
+            <div class="box card">
+                <div class="card__face card__face--front">
+                    <img src="./img/bg3.jpg" alt="Error">
+                    <h2 class="h-secondary center">The Team</h2>
+                    <p class="center">We’ve got a strong team filled with caffeine addicted developers, gradients loving designers and machine like working managers.</p>
+                </div>
+                <div class="card__face card__face--back">
+                    <h3 class="text">Coming Soon!!!</h3>
+                </div>
             </div>
             <div class="box">
                 <img src="./img/bg4.jpg" alt="Error">
