--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
     </section>
     <secction class="services-container">
         <div id="services">
-            <div class="box">
-                <img src="./img/bg2.jpg" alt="Error">
-                <h2 class="h-secondary center">Our Focus</h2>
-                <p class="center">We think slightly out of the box, we believe that a club’s resources must not only be channeled into conducting events but also to propagate learning and teaching, symbiotically.</p>
+            <div class="box card">
+                <div class="card__face card__face--front">
+                    <img src="./img/bg2.jpg" alt="Error">
+                    <h2 class="h-secondary center">Our Focus</h2>
+                    <p class="center">We think slightly out of the box, we believe that a club’s resources must not only be channeled into conducting events but also to propagate learning and teaching, symbiotically.</p>
+                </div>
+                <div class="card__face card__face--back">
+                    <h3 class="text">More Details Coming Soon!!!</h3>
+                </div>
             </div>
             <div class="box card">
                 <div class="card__face card__face--front">
@@ -46,13 +51,18 @@
                     <p class="center">We’ve got a strong team filled with caffeine addicted developers, gradients loving designers and machine like working managers.</p>
                 </div>
                 <div class="card__face card__face--back">
-                    <h3 class="text">Coming Soon!!!</h3>
+                    <h3 class="text">More Details Coming Soon!!!</h3>
                 </div>
             </div>
-            <div class="box">
-                <img src="./img/bg4.jpg" alt="Error">
-                <h2 class="h-secondary center">Updates</h2>
-                <p class="center">We are actively conducting workshops, and also contributing to the development side by churning out high quality projects.</p>
+            <div class="box card">
+                <div class="card__face card__face--front">
+                    <img src="./img/bg4.jpg" alt="Error">
+                    <h2 class="h-secondary center">Updates</h2>
+                    <p class="center">We are actively conducting workshops, and also contributing to the development side by churning out high quality projects.</p>
+                </div>
+                <div class="card__face card__face--back">
+                    <h3 class="text">More Details Coming Soon!!!</h3>
+                </div>
             </div>
         </div>
     </secction>
